# TodoPP

./: .gitignore  CMakeLists.txt  README.md  config.h  config.h.in  date.cpp  date.h  main.cpp  parser.h  task.cpp  task.h  todo.cpp  todo.h
include/: date.h  task.h  todo.h
src/: date.cpp  main.cpp  task.cpp  todo.cpp
